--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,7 +2,7 @@
     background: linear-gradient(135deg, #0F96B4 0%, #332876 100%);
     color: white;
     font-family: 'Poppins', sans-serif;
-    height: 112vh;
+    height: 100vh;
   }
   
   .footer-content {
@@ -173,7 +173,7 @@ text-align: center;
       margin-left: 2rem;
     }
     .footer-container{
-        height: 160vh;
+        height: 145vh;
     }
     .address-info{
         position: relative;
@@ -210,6 +210,9 @@ text-align: center;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
+    }
+    .footer-container{
+        height: 179vh;
     }
 
     .footer-section {
@@ -254,7 +257,7 @@ text-align: center;
         margin-left: 47px;
     }
     .footer-container{
-        height: 107vh;
+        height: 129vh;
     }
 
     .footer-section {
@@ -351,7 +354,7 @@ text-align: center;
 }
 @media (max-width:380px){
     .footer-container{
-        height: 111vh;
+        height: 124vh;
     }
     .address-info{
         bottom: 282px;
@@ -397,5 +400,7 @@ text-align: center;
     }
     .footer-bottom{
         font-size: 13px;
+        bottom: 236px;
     }
+
 }
