--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -11,10 +11,12 @@
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(255, 255, 255, 0.2);
     height: 80px;
-    margin: 0 auto;
+    margin: 0 100px;
     padding: 0 30px;
     box-sizing: border-box;
     top: 16px;
+    z-index: 9;
+    position: fixed;
   }
   
   .logo-container {
@@ -93,7 +95,8 @@
   }
   @media (max-width: 1024px) {
     .home-parent {
-      width: 90%;
+      width: 100%;
+      margin: 0 auto;
     }
     .appointment{
         border-radius: 25px;
@@ -116,7 +119,9 @@
   
   @media (max-width: 768px) {
     .home-parent{
-        border-radius: 20px 20px 0 0;
+        border-radius: 0px 0px 0 0;
+        margin: 0 auto;
+        width: 100%;
     }
     .nav-container {
       display: none;
