--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-navbar></app-navbar>
-<app-contact-form></app-contact-form>
+<!-- <app-contact-form></app-contact-form> -->
+<app-about></app-about>
 <app-footer></app-footer>
