--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
 <!-- <app-contact-form></app-contact-form> -->
-<app-about></app-about>
+<!-- <app-about></app-about> -->
+<app-doctor></app-doctor>
 <app-footer></app-footer>
