--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -11,6 +11,7 @@
     justify-content: space-between;
     max-width: 1200px;
     margin: 3rem;
+    margin-top: 0;
     padding-top: 4rem;
   }
   .about{
