--- a/src/app/doctor-structure/doctor-structure.component.html
+++ b/src/app/doctor-structure/doctor-structure.component.html
@@ -21,7 +21,7 @@ About Doctor
     </div>
 </div>
 </div> -->
-
+<!-- 
 <div class="container">
     <div class="profile">
       <div class="profile-image">
@@ -34,7 +34,34 @@ About Doctor
       </div>
     </div>
     <div class="profile-details" >
-        <!-- <div class="close-button" (click)="closeProfileDetails()">&#10005;</div> -->
+        <div class="close-button" (click)="closeProfileDetails()">&#10005;</div>
+      <div class="rectangle-div">
+        About Doctor
+      </div>
+      <div class="about">
+        {{about}}
+      </div>
+      <div class="button">
+        <div class="view-profile-parent">
+          <b class="view-profile">View Profile</b>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+  <div class="container" (mouseenter)="openProfileDetails()" (mouseleave)="closeProfileDetails()">
+    <div class="profile">
+      <div class="profile-image">
+        <img class="doctor" [src]="image" alt="{{name}}">
+      </div>
+      <div class="profile-info">
+        <div class="dr-bhoopal-ts">{{name}}</div>
+        <div>{{qualification}}</div>
+        <div>{{desgination}}</div>
+      </div>
+    </div>
+    <div class="profile-details" *ngIf="showProfileDetails">
+      <div class="close-button" (click)="closeProfileDetails()">&#10005;</div>
       <div class="rectangle-div">
         About Doctor
       </div>
@@ -48,4 +75,5 @@ About Doctor
       </div>
     </div>
   </div>
+  
   
