--- a/src/app/doctor-structure/doctor-structure.component.css
+++ b/src/app/doctor-structure/doctor-structure.component.css
@@ -152,13 +152,13 @@
     right: 10px;
     width: 30px;
     height: 30px;
-    background-color: #fff;
+    /* background-color: #fff; */
     border-radius: 50%;
     text-align: center;
     line-height: 30px;
     font-size: 20px;
     font-weight: bold;
-    color: #333;
+    color: #fff;
     cursor: pointer;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     display: none;
