--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <!-- <app-contact-form></app-contact-form> -->
 <!-- <app-about></app-about> -->
-<app-doctor></app-doctor>
+<!-- <app-doctor></app-doctor> -->
+<app-doctor-details></app-doctor-details>
 <app-footer></app-footer>
