--- a/src/app/doctor-structure/doctor-structure.component.html
+++ b/src/app/doctor-structure/doctor-structure.component.html
@@ -70,7 +70,9 @@ About Doctor
       </div>
       <div class="button">
         <div class="view-profile-parent">
-          <b class="view-profile">View Profile</b>
+            <a [routerLink]="['/doctor', slug]">
+                <b class="view-profile">View Profile</b>
+              </a>
         </div>
       </div>
     </div>
