--- a/src/app/doctor/doctor.component.html
+++ b/src/app/doctor/doctor.component.html
@@ -12,5 +12,6 @@
  [qualification]="doctor.qualification"
  [image]="doctor.image"
  [about]="doctor.about" 
+ [slug]="doctor.slug"
  ></app-doctor-structure>
 </div>
