--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <!-- <app-contact-form></app-contact-form> -->
 <!-- <app-about></app-about> -->
 <!-- <app-doctor></app-doctor> -->
-<app-doctor-details></app-doctor-details>
+<router-outlet></router-outlet>
+
 <app-footer></app-footer>
