--- a/src/app/doctor/doctor.component.html
+++ b/src/app/doctor/doctor.component.html
@@ -13,5 +13,6 @@
  [image]="doctor.image"
  [about]="doctor.about" 
  [slug]="doctor.slug"
+ [icon]="doctor.icon"
  ></app-doctor-structure>
 </div>
