--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -49,7 +49,7 @@
             <li><a routerLink="/about-us" routerLinkActive="active-link"(click)="closeMenu()">About Us</a></li>
             <li><a routerLink="/doctors" routerLinkActive="active-link"(click)="closeMenu()">Doctors</a></li>
             <li><a routerLink="/" routerLinkActive="active-link"(click)="closeMenu()">Specialties</a></li>
-            <li><a routerLink="/" routerLinkActive="active-link"(click)="closeMenu()">Services</a></li>
+            <li><a routerLink="/services" routerLinkActive="active-link"(click)="closeMenu()">Services</a></li>
             <li><a routerLink="/" routerLinkActive="active-link"(click)="closeMenu()">Blog</a></li>
             <li><a routerLink="/" routerLinkActive="active-link"(click)="closeMenu()">Gallery</a></li>
             <li><a routerLink="/contact-us" routerLinkActive="active-link"(click)="closeMenu()">Contact Us</a></li>
