--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -43,7 +43,7 @@
     .container_1_para{
         color: #000;
         text-align: justify;
-        font-family: "DM Sans";
+        font-family: "Open sans";
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
@@ -63,7 +63,7 @@
     .container_1_para_2{
         color: #FFF;
         text-align: justify;
-        font-family: "DM Sans";
+        font-family: "Open sans";
         font-size: 12px;
         font-style: normal;
         font-weight: 400;
@@ -97,7 +97,7 @@
 
     .points_content{
         color: #FFF;
-        font-family: "DM Sans";
+        font-family: "Open sans";
         font-size: 14px;
         font-style: normal;
         font-weight: 500;
@@ -148,7 +148,7 @@
 
     .container_2_para{
         color: #000;
-        font-family: "DM Sans";
+        font-family: "Open sans";
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
@@ -421,7 +421,7 @@
     
     .container_1_para{
         color: #000;
-        font-family: "DM Sans";
+        font-family: "Open sans";
         font-size: 16px;
         font-style: normal;
         font-weight: 400;
@@ -452,7 +452,7 @@
     .container_1_para_2{
         color: #FFF;
         text-align: justify;
-        font-family: "DM Sans";
+        font-family: "Open sans";
         font-size: 16px;
         font-style: normal;
         font-weight: 500;
@@ -481,7 +481,7 @@
     
     .points_content{
         color: #FFF;
-        font-family: "DM Sans";
+        font-family: "Open sans";
         font-size: 18px;
         font-style: normal;
         font-weight: 500;
@@ -534,7 +534,7 @@
     
     .container_2_para{
         color: #000;
-        font-family: "DM Sans";
+        font-family: "Open sans";
         font-size: 16px;
         font-style: normal;
         font-weight: 400;
