--- a/src/app/specialities-design/specialities-design.component.html
+++ b/src/app/specialities-design/specialities-design.component.html
@@ -1,3 +1,37 @@
 <div class="root_container">
-    
+    <div class="container_1">
+        <div class="speciality_contents">
+            <div class="speciality_heading">{{heading}}</div>
+            <div class="para">{{para_1}}</div>
+            <div class="para">{{para_2}}</div>            
+            <div class="para">{{para_3}}</div>            
+            <div class="para">{{para_4}}</div>            
+            <div class="para">{{para_5}}</div>            
+            <div class="services_heading">{{services}}</div>
+            <div class="services_offer">{{description}}</div>
+        </div>
+        <div class="speciality_img">
+            <img [src]="image" alt="">
+        </div>
+    </div>
+
+    <!-- doctor details -->
+
+    <div class="container_2">
+        <div class="team_heading">Meet Our Medical Team</div>
+        <div class="doctors_container">
+            <div class="doc_1">
+                <img src="../../assets/doctor-1.png" alt="">
+                <div class="doc_name">Dr. Bhoopal </div>
+                <div class="qualification">MBBS, DGO</div>
+                <div class="department">Obstertrics & Gynaecologist</div>
+            </div>
+            <!-- <div class="doc_1">
+                <img src="../../assets/doctor-1.png" alt="">
+                <div class="doc_name">Dr. Bhoopal </div>
+                <div class="qualification">MBBS, DGO</div>
+                <div class="department">Obstertrics & Gynaecologist</div>
+            </div> -->
+        </div>
+    </div>
 </div>
