--- a/src/app/doctor-structure/doctor-structure.component.html
+++ b/src/app/doctor-structure/doctor-structure.component.html
@@ -68,6 +68,9 @@ About Doctor
       <div class="about">
         {{about}}
       </div>
+      <div class="description">
+        {{description}}
+      </div>
       <div class="button">
         <div class="view-profile-parent">
             <a [routerLink]="['/doctor', slug]">
