--- a/src/app/ent/ent.component.html
+++ b/src/app/ent/ent.component.html
@@ -5,3 +5,23 @@ para_2="It is well equipped with the latest diagnostic technology, including str
 para_3="The department also provides audiology, voice, and speech therapy as allied services for voice problems, stammering, autism, and other speech problems. We also have a unit dealing with swallowing problems. The department is well-equipped to take care of all ear, nose, and throat emergencies."
 image="../../assets/specialiti/Ent.png"
 ></app-specialities-design>
+
+<div class="team_heading">Meet Our Medical specialists</div>
+<div class="doctor_details">
+    <app-doctor-structure 
+    image = "../../assets/doctor-1.png" 
+    name = "Dr. Bhoopal" 
+    desgination = "Consultant- Psychiatrist"
+    qualification = "MBBS, MD - Psychiatry"
+    about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
+    description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
+    ></app-doctor-structure>
+    <app-doctor-structure 
+    image = "../../assets/doctor-1.png" 
+    name = "Dr. Bhoopal" 
+    desgination = "Consultant- Psychiatrist"
+    qualification = "MBBS, MD - Psychiatry"
+    about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
+    description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
+    ></app-doctor-structure>
+</div>
