--- a/src/app/general-physician/general-physician.component.html
+++ b/src/app/general-physician/general-physician.component.html
@@ -21,21 +21,23 @@
 
     <!-- doctor details -->
 
-    <div class="container_2">
-        <div class="team_heading">Meet Our Medical Team</div>
-        <div class="doctors_container">
-            <div class="doc_1">
-                <img src="../../assets/doctor-1.png" alt="">
-                <div class="doc_name">Dr. Bhoopal </div>
-                <div class="qualification">MBBS, DGO</div>
-                <div class="department">Obstertrics & Gynaecologist</div>
-            </div>
-            <div class="doc_1">
-                <img src="../../assets/doctor-1.png" alt="">
-                <div class="doc_name">Dr. Bhoopal </div>
-                <div class="qualification">MBBS, DGO</div>
-                <div class="department">Obstertrics & Gynaecologist</div>
-            </div>
-        </div>
+    <div class="team_heading">Meet Our Medical specialists</div>    
+    <div class="doctor_details">
+        <app-doctor-structure 
+        image = "../../assets/doctor-1.png" 
+        name = "Dr. Bhoopal" 
+        desgination = "Consultant- Psychiatrist"
+        qualification = "MBBS, MD - Psychiatry"
+        about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
+        description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
+        ></app-doctor-structure>
+        <app-doctor-structure 
+        image = "../../assets/doctor-1.png" 
+        name = "Dr. Bhoopal" 
+        desgination = "Consultant- Psychiatrist"
+        qualification = "MBBS, MD - Psychiatry"
+        about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
+        description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
+        ></app-doctor-structure>
     </div>
 </div>
