--- a/src/app/neurology/neurology.component.html
+++ b/src/app/neurology/neurology.component.html
@@ -4,3 +4,22 @@ para_1="Neurology treats all the neurological diseases, including stroke, headac
 para_2="Neurosurgery, a branch of surgery involved with the brain, spine, and nerves, is a key specialty at Aksha Hospital. Our neurosurgeons treat neurological diseases such as head injury, spinal injury, brain tumors, spinal tumors, brain hemorrhage, hydrocephalus, nerve injuries, tumors, disc prolapse or herniation, spinal dislocation, unstable spine, congenital malformations like atlanto-axial dislocation, spinal dysraphism, etc. Treatment of seizures or epilepsy as well as modern treatments for movement disorders like Parkinson’s disease are further specializations."
 image="../../assets/specialiti/Neurology.png"
 ></app-specialities-design>
+<div class="team_heading">Meet Our Medical specialists</div>
+<div class="doctor_details">
+    <app-doctor-structure 
+    image = "../../assets/doctor-1.png" 
+    name = "Dr. Bhoopal" 
+    desgination = "Consultant- Psychiatrist"
+    qualification = "MBBS, MD - Psychiatry"
+    about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
+    description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
+    ></app-doctor-structure>
+    <app-doctor-structure 
+    image = "../../assets/doctor-1.png" 
+    name = "Dr. Bhoopal" 
+    desgination = "Consultant- Psychiatrist"
+    qualification = "MBBS, MD - Psychiatry"
+    about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
+    description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
+    ></app-doctor-structure>
+</div>
