--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,30 @@
 ::-webkit-scrollbar {
     display: none;
 }
+
+/* doctor details */
+
+.doctor_details{
+    display: flex;
+    justify-content: center;
+    padding:0 0 10% 0;
+    gap: 40px;
+}
+
+.team_heading{
+    color: #222;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 70px 0;
+}
+
+@media (max-width : 500px){
+    .doctor_details{
+        flex-direction: column;
+        align-items: center;
+    }
+}
