--- a/src/app/pediatrician/pediatrician.component.css
+++ b/src/app/pediatrician/pediatrician.component.css
@@ -153,7 +153,7 @@
 /* container_4_ */
 
 .container_4{
-    background-image: url(../../assets/specialiti/pediatric_container_4_bg.png);
+    background-image: url('../../assets/specialiti/pediatric_container_4_bg.png');
     background-size: cover;
     padding: 10%;
     background-attachment: fixed;
